--- a/templates/deck/index.html.twig
+++ b/templates/deck/index.html.twig
@@ -7,7 +7,7 @@
     <div class="offset-1"></div>
     <div class="col-2">
         <div class="new">
-            <h3 class="text-center">Nouveau</h3>
+            <h3 class="text-center">Nouveau Deck</h3>
             {{ include('deck/_form.html.twig') }}
         </div>
         <div class="new mt-5">
@@ -18,7 +18,6 @@
             <div>
                 <a href="{{ path('deck_show', {'id': deck.id}) }}" class="text-dark">{{ deck.name|capitalize }}</a>
                 <a href="{{ path('deck_edit', {'id': deck.id}) }}"><i class="fas fa-pencil-alt text-dark"></i></a>
-                <span>{{ include('deck/_delete_form.html.twig') }}</span>
             </div>
         {% else %}
             <p>Aucun deck pour le moment</p>
